Attempt to make page more responsive so it can be viewed on mobile. Fix navbar and address issue where context was overflowing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --background: #ffffff;
   --foreground: #171717;
+  --main-content: 48rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,12 +13,13 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+} 
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
 }
 
 @layer base {
@@ -26,8 +28,18 @@ body {
     @apply my-4 pl-8 
   }
 }
-
 /* } MAIN CONTENT STYLING */
+
+.main {
+  max-width: var(--main-content);
+  min-height: 100vh;
+}
+
+.nav-link {
+  display: flex;
+  margin-right: .5rem;
+}
+
 
 .h1 {
   @apply text-4xl font-medium tracking-tight mt-6 mb-3;
@@ -39,6 +51,19 @@ body {
 .project.link {
   @apply text-4xl font-medium
 }
+
+.navbar {
+  max-width: var(--main-content);
+}
+
+
+@media (max-width: 600px) {
+  .opt-img {
+    display: none;
+  }
+}
+
+
 
 /* END MAIN CONTENT STYLING  */
 
